test/resources/differential/undetected-copy/sarif-fmt.txt
warning: In POSIX sh, [[ ]] is undefined.
   ┌─ test/resources/tektontask/tektontask.yaml:40:12
   │
40 │         if [[ violence = 'inherent in the system' ]]; then
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: This expression is constant. Did you forget the $ on a variable?
   ┌─ test/resources/tektontask/tektontask.yaml:40:24
   │
40 │         if [[ violence = 'inherent in the system' ]]; then
   │                        ^

warning: In POSIX sh, [[ ]] is undefined.
   ┌─ test/resources/tektontask/cooltask.yaml:40:12
   │
40 │         if [[ violence = 'inherent in the system' ]]; then
   │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: This expression is constant. Did you forget the $ on a variable?
   ┌─ test/resources/tektontask/cooltask.yaml:40:24
   │
40 │         if [[ violence = 'inherent in the system' ]]; then
   │                        ^

error: On most OS, shebangs can only specify a single parameter.
   ┌─ test/resources/tektontask/cooltask.yaml:34:9
   │
34 │         #!/bin/bash -e -u -o pipefail
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: Double quote to prevent globbing and word splitting.
   ┌─ test/resources/tektontask/cooltask.yaml:29:14
   │
29 │         eval $SCRIPT
   │              ^^^^^^^

warning: watery_tart is referenced but not assigned.
   ┌─ test/resources/tektontask/cooltask.yaml:27:86
   │
27 │             echo "You can't expect to wield supreme executive power just 'cause some $watery_tart threw a sword at you!"
   │                                                                                      ^^^^^^^^^^^^

warning: 6 warnings emitted
error: 6 errors emitted
